# PAROL6-Desktop-robot-arm

./: README.md  SAFETY_WARNING_AND_DISCLAIMER.md
.github/: FUNDING.yml
BOM/: BOM.md  PAROL BOM.xlsx  PAROL6 BOM OLD.xlsx  PAROL6 BOM.xlsx  PAROL_BOM_12_12_2023.xlsx  PAROL_BOM_18_11_2023.xlsx  PAROL_BOM_1_1_2024.xlsx  PAROL_BOM_9_11_2023.xlsx  PAROL_BOM_excel.xlsx
Building instructions/: PETG_printing.md  PETG_printing.md.txt
Extras/LEAP motion control code/: LEAP_setup.md  PAROL6_LEAP_code.py  PAROL6_LEAP_comms_LEAP.py  PAROL6_simulator_low_pass.py
GERBERS_PRODUCTION/: PAR6_mainboard_v1.csv  bom.csv  designators.csv  netlist.ipc  positions.csv
GUI_PAROL/files/: GUI_PAROL_latest.py  PAROL6_ROBOT.py  SIMULATOR_Robot.py  Serial_sender_good_latest.py
PAROL control board software/Main_code/: platformio.ini
PAROL control board software/Testing_code/: SerialPacketParser.cpp  communication.h  motor_init.cpp  utils.h
PAROL control board software/src/: constants.h  main.cpp  motor_init.h
PAROL control board/src/: common.h  hw_init.cpp  structs.h  (+2 more)
PAROL6 control board main software/: platformio.ini
PAROL6 control board test code/: can_12_12  can_parol6_test.py  platformio.ini
PAROL6_URDF/PAROL6/: CMakeLists.txt  package.xml
PAROL6_URDF/PAROL6/config/: joint_names_PAROL6.yaml
PAROL6_URDF/PAROL6/launch/: display.launch  gazebo.launch
PAROL6_URDF/PAROL6/meshes/: L1.STL  L2.STL  L3.STL  L4.STL  L5.STL  L6.STL  base_link.STL
PAROL6_URDF/PAROL6/urdf/: PAROL6.csv  PAROL6.urdf
Print table/: PR_EXCEL.xlsx
mounting plates/: big_base.STEP  small_base.STEP
(+121 files in other folders)
